Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-138064

[flite] tst_QTextToSpeech fails on ubuntu/arm

    XMLWordPrintable

Details

    • ee71e0ead (dev), afc9dd372 (6.10), c895741dd (6.9), 0a864ab94 (tqtc/lts-6.8)

    Description

      https://testresults.qt.io/coin/log/qt/qtspeech/518e121530cc5b893a0b8d80c141609c0dc6cdfc/LinuxUbuntu_24_04aarch64LinuxUbuntu_24_04aarch64GCCqtci-linux-Ubuntu-24.04-aarch64-52-3825a7TestOnly/ed8f6ecaa007a82e338ecb607f41a424964d5f63/test_1750982352

      seems that the QTextToSpeech engine cannot be initialized on ubuntu/arm

      agent:2025/06/26 22:34:35 build.go:412: FAIL!  : tst_QTextToSpeech::availableVoices(flite) Compared values are not the same
      agent:2025/06/26 22:34:35 build.go:412:    Actual   (tts.state())         : Error
      agent:2025/06/26 22:34:35 build.go:412:    Expected (QTextToSpeech::Ready): Ready
      agent:2025/06/26 22:34:35 build.go:412:    Loc: [/home/qt/work/qt/qtspeech/tests/auto/qtexttospeech/tst_qtexttospeech.cpp(209)]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            timblechmann tim blechmann
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes