Flite: fix library paths to locate voices

The flite voices are loaded from shared libraries at run-time. The
current implementation only considered x86_64, but we should take all
multiarch library directories into account.

Fixes: QTBUG-138064
Pick-to: 6.9 6.8
Change-Id: I42b01a3f3076a990c22fa27fb683f88dac52ac10
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ee71e0ead636f3596a4ca3f1fab01941a56404d3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>